Fix container overflow in .chonky-root

--- a/style/_shared.scss
+++ b/style/_shared.scss
@@ -20,6 +20,7 @@
     font-size: $font-size-base;
     font-family: sans-serif;
     flex-direction: column;
+    box-sizing: border-box;
     position: relative;
     text-align: left;
     display: flex;
