--- a/style/main.css
+++ b/style/main.css
@@ -18,6 +18,7 @@
   font-size: 15px;
   font-family: sans-serif;
   flex-direction: column;
+  box-sizing: border-box;
   position: relative;
   text-align: left;
   display: flex;
